// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SummaryComponent with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totaling 
    $1,232,146.45
  </p>
</div>
`;

exports[`should render SummaryComponent with one expenses 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </p>
</div>
`;
